--- a/style.css
+++ b/style.css
@@ -1,100 +1,4 @@
-* {
-    margin: 0;
-    padding: 0;
-    /* box-sizing: border-box; */
-}
-
 body {
-    font-family: 'Avenir', sans-serif;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 2;
-    color: #424242;
-}
-
-section {
-    margin-bottom: 5rem;
-}
-
-.jumbotron {
-    background-image: url("bg.jpeg");
-    background-size: cover;
-    color: aliceblue;
-
-    backface-visibility: hidden;
-}
-
-.heading-primary-main {
-    animation: moveInRight 1s ease-out;
-    letter-spacing: 2px;
-}
-
-.heading-primary-sub {
-    animation: moveInLeft 1s ease-out;
-    letter-spacing: 2px;
-}
-
-.attending-date {
-    display: inline;
-    background-color: #abcfd95d;
-    padding: 3px 5px;
-    border-radius: 5px;
-    margin-right: 5px;
-}
-
-.attending-event {
-    display: inline;
-    padding: 3px 5px;
-}
-
-@keyframes moveInLeft {
-    0% {
-        opacity: 0;
-        transform: translateX(-30px);
-    }
-
-    80% {
-        transform: translateX(5px);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translate(0);
-    }
-}
-
-@keyframes moveInRight {
-    0% {
-        opacity: 0;
-        transform: translateX(30px);
-    }
-
-    80% {
-        transform: translateX(-5px);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translate(0);
-    }
-}
-
-.paper-item {
-    font-size: 1 rem;
-}
-
-.paper-title {
-    font-weight: 500;
-    display: block;
-}
-
-.paper-author {
-    display: block;
-}
-
-.paper-venue {
-    display: block;
-}
-.paper-resources {
-    display: block;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
 }
