--- a/style.css
+++ b/style.css
@@ -2,3 +2,20 @@ body {
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
 }
+
+.name-underline {
+    position: relative;
+    color: #2c3e50; /* A professional dark blue color */
+  }
+  
+  .name-underline::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -4px;
+    width: 100%;
+    height: 6px;
+    background-image: url("data:image/svg+xml,%3Csvg width='100' height='6' viewBox='0 0 100 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M 0 3 Q 25 0, 50 3 T 100 3' stroke='%233498db' fill='none' stroke-width='3'/%3E%3C/svg%3E");
+    background-size: 100px 6px;
+    background-repeat: repeat-x;
+  }
